# BUMRC_NewArm_pub

./: README.md
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/cam_files/: kinetic.dae
src/arm_description/config/: initial_positions.yaml  joint_limits.yaml  lerp_planning.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur.srdf  ur.urdf.xacro
src/arm_description/launch/: arm_hardware.launch.py  arm_moveit.launch.py  controller.launch.py  controller.yaml  display.launch  gazebo.launch  odrive_can.yaml  urdf.rviz  urdf_clean.rviz
src/arm_description/meshes/: Carbon_Fiber_Tube_v1_1.stl  Grabber_Base_v1_1.stl  J1In_v1_1.stl  J2Out_v1_1.stl  Plate1_v1_1.stl  Plate2_v1_2_1.stl  Plate2_v1_3_1.stl  Small_Light_-_Spiral_Face_3.2M_20T_v1_1.stl  base_link.stl
src/arm_description/models/USB/: model.config  model.sdf
src/arm_description/models/base_plate/: model.config  model.sdf
src/arm_description/models/pick_place/: model.config  model.sdf
src/arm_description/models/slab/: model.config  model.sdf
src/arm_description/rviz/: rvizconfig.rviz
src/arm_description/src/: usb_place.cpp
src/arm_description/urdf/: ARM.gazebo  ARM.trans  ARM.urdf.xacro
src/arm_description/worlds/: arm_final.world  newarm_world1.world  newarm_world2.world  newarm_world3.world  newworld4.world  pick_place_bowl.world  pick_place_world.world  pick_place_world2.world  world_final_final_fr_world.world
src/arm_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_gripper_moveit_config/config/: ARM.ros2_control.xacro  ARM.srdf  ARM.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/arm_gripper_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/arm_hardware/: CMakeLists.txt  arm_hardware.xml  package.xml
src/arm_hardware/include/arm_hardware/: arm_hardware.hpp
src/arm_hardware/src/: arm_hardware.cpp
src/ros_odrive/odrive_node/launch/: example_launch.yaml
