<?xml version="1.0"?>
<package format="3">
  <name>arm_hardware</name>
  <version>0.0.1</version>
  <description>CAN-based ODrive hardware interface for ARM robot</description>

  <maintainer email="yarnotnub@yahoo.com">ray</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/arm_hardware.xml"/>
  </export>
</package>